appId: ${APP_ID}
name: Launch and verify the brownfield app
---
# Launch the app
- launchApp

# Verify that native part has launched
# And launch the React Native part
- assertVisible:
    id: openReactNativeButton
- tapOn:
    id: openReactNativeButton

# Close the dev menu if shown
- runFlow: ./skip-dev-menu.yml

# Verify that the RN part has launched
- extendedWaitUntil:
    visible: Expo + Brownfield = 🖤
    timeout: 60000
- assertVisible:
    id: home-tab
- assertVisible:
    id: apis-tab
