# Communication API Flow
#
# Verifies that:
# - `sendMessage()` works
# - Receiving messages from the native side works
appId: host.exp.exponent.brownfield.test.android
---
# Launch and verify the native app
- launchApp
- assertVisible:
    id: openReactNativeButton
# Launch and verify the brownfield app
- tapOn:
    id: openReactNativeButton
- assertVisible: Expo + Brownfield = 🖤
- assertVisible:
    id: home-tab
- assertVisible:
    id: apis-tab
# Navigate to the Communication API screen
- tapOn:
    id: apis-tab
- tapOn:
    id: apis-communication
# Verify the Communication API screen is rendered correctly
- assertVisible: Communication
- assertVisible: Send message
- assertVisible: Send a message to the native app
# Verify `sendMessage()` works
- tapOn:
    id: communication-send-message
- assertVisible: React Native(brownfield-tester/expo-app)
# Verify receiving messages from the native side works
# Ensure the message is not empty
- assertNotVisible:
    id: communication-received-message
    text: "{}"
# Ensure the message was received multiple times
- assertVisible: "Received message (multiple: true)"
