appId: dev.expo.BrownfieldIntegratedTester
---
- runFlow: ../common/_nested-flows/launch-brownfield.yml

- tapOn:
    id: apis-tab
- tapOn:
    id: apis-navigation
- assertVisible:
    id: navigation-enable-native-back

- tapOn:
    id: navigation-pop-to-native
- assertVisible:
    id: openReactNativeButton

- tapOn:
    id: openReactNativeButton
- swipe:
    direction: RIGHT
- assertVisible:
    id: openReactNativeButton

- tapOn:
    id: openReactNativeButton

- tapOn:
    id: apis-tab
- tapOn:
    id: apis-navigation
- tapOn:
    id: navigation-disable-native-back
- swipe:
    direction: RIGHT
- assertVisible:
    id: apis-communication
- assertVisible:
    id: apis-navigation

- tapOn:
    id: apis-navigation
- tapOn:
    id: navigation-pop-to-native
- assertVisible:
    id: openReactNativeButton

- tapOn:
    id: openReactNativeButton

- tapOn:
    id: apis-tab
- tapOn:
    id: apis-navigation
- tapOn:
    id: navigation-enable-native-back
- swipe:
    direction: RIGHT
- swipe:
    direction: RIGHT
- assertVisible:
    id: openReactNativeButton
